--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONCESSIONARIA DO JAPA</title>
+    <title>Curso</title>
     <link real="stylesheet" href="style.css">
 </head>
 <body>
-<h1>CONCESSIONARIA do japa</h1>
-<p>VENDE-SE CARROS JAPONESES E MUITO MAIS</p>   
+<h1>Curso de Progamação com o Japa</h1>
+<p>Venha aprender a progamar hoje!</p>
+<img src="imagem1.jpg">
 </body>
 </html>
